--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Users\\User\\Desktop\\Gruppe3OrdinationTestProjekt\\Ordination","type":"PROJECT","hints":{"PROJECT_NAME":"Ordination"}},"ABSENT"]]
+[[{"location":"C:\\Program Files\\Java\\jdk1.8.0_144","type":"JRE","hints":{}},"jre:jre:1.8.0"],[{"location":"C:\\Users\\User\\Desktop\\Gruppe3OrdinationTestProjekt\\Ordination","type":"PROJECT","hints":{"PROJECT_NAME":"Ordination"}},"ABSENT"]]
