Har arbejdet i Service klassen

--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Skole\\Git\\Projekt Test\\Gruppe3OrdinationTestProjekt\\Ordination","type":"PROJECT","hints":{"PROJECT_NAME":"Ordination"}},"ABSENT"]]
